增加缺少的帮助图片

--- a/BrowerCheck.htm
+++ b/BrowerCheck.htm
@@ -626,7 +626,7 @@
         }
 
         .c6ui-f14 {}
-        .c6ui-f15 {font-size:18px;}
+        .c6ui-f15 {font-size:18px;font-weight: bold;}
     </style>
 </head>
 <body onload="InitialInfo()">
