--- a/BrowerCheck.html
+++ b/BrowerCheck.html
@@ -193,15 +193,15 @@
             if (Sys.ie) {
                 IeCheck();
             }
-//            else if (Sys.chrome) {
-//                ChromeCheck();
-//            }
+            else if (Sys.chrome) {
+                ChromeCheck();
+            }
 //            else if (Sys.safari) {
 //                SafariCheck();
 //            }
-//            else if (Sys.firefox) {
-//                FireFoxCheck();
-//            }
+            else if (Sys.firefox) {
+                FireFoxCheck();
+            }
             else {
                 $("#browerInfo").hide();
                 $("#browerSet").hide();
@@ -526,6 +526,8 @@
 
     <style type="text/css">
         a{color:#003299;font-weight:bold;}.checkinfo-area{border:solid #aacbee 1px;font-size:14px;line-height:20px;background-color:#FFFFFF;margin:10px 4px;width:100%;}.checkinfo-area .checkinfo-area-title{overflow:hidden;border-bottom:solid #aacbee 1px;height:30px;line-height:30px;padding:0 8px;background-color:#f9fcff;background-image:-moz-linear-gradient(top,#f9fcff,#e8f1f9);background-image:-ms-linear-gradient(top,#f9fcff,#e8f1f9);background-image:-o-linear-gradient(top,#f9fcff,#e8f1f9);background-image:-webkit-gradient(linear,left top,left bottom,from(#f9fcff),to(#e8f1f9));background-image:-webkit-linear-gradient(top,#f9fcff,#e8f1f9);background-image:linear-gradient(top,#f9fcff,#e8f1f9);filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#f9fcff',EndColorStr='#e8f1f9');}.checkinfo-area .checkinfo-area-content{padding:6px;overflow:hidden;}.check-brower-ie{display:none;}.check-brower-safari{display:none;}.check-brower-chrome{display:none;}.check-brower-firefox{display:none;}.browerInfo{}.browerRet{margin-left:20px;font-weight:bold;}.browerSuggest{margin-left:20px;}.zxlm-f14{}.zxlm-f15{font-size:18px;font-weight:bold;}
+        .result_no{color: red;font-weight:bold;}
+        .result_error{ color: red;font-weight:bold;font-size:16px;}
     </style>
 </head>
 <body onload="InitialInfo()">
@@ -592,8 +594,8 @@
                         
                         <li>9、Silverlight插件：<span id="ieBrowerInfo9" class="browerInfo"></span><span id="ieBrowerRet9"
                             class="browerRet"></span><a id="ieBrowerSuggest9" class="browerSuggest"></a></li>
-                        <li>10、其他业务系统使用要求：<span id="ieBrowerInfo10" class="browerInfo"></span><span id="ieBrowerRet10"
-                            class="browerRet"></span><span id="ieBrowerSuggest10" class="browerSuggest"></span></li>
+                        <li>10、其他业务系统要求：<span id="ieBrowerInfo10" class="browerInfo"></span><span id="ieBrowerRet10"
+                            class="browerRet"></span><span id="ieBrowerSuggest10" class="browerSuggest">检测中...</span></li>
 
                         <li style="height:10px;"></li>
                             <li><a href="http://mis.msdi.cn/sysmodule/FileSystem/Download.aspx?IsExec=true&Key=Goodway_BE-DownLoad&Id=FFL3MT1J_IETool.exe">下载常见问题修复工具(注：目前只在XP、Win7下进行全面的测试验证)</a></li>
@@ -688,10 +690,10 @@
             <div class="checkinfo-area-content">
                 <ul style="padding: 0px; margin: 0px; list-style: none;">
                     <li style="float:left; margin-left:10px;"><a onclick="CommonSet(this,'jsset','允许Javascript')" href="#">允许Javascript</a></li>
-                    <li style="float:left; margin-left:10px;"><a onclick="CommonSet(this,'jsset','允许Cookies')" href="#">允许Cookies</a></li>
-                    <li style="float:left; margin-left:10px;"><a onclick="CommonSet(this,'jsset','允许弹出窗口')" href="#">允许弹出窗口</a></li>
                     <li style="float:left; margin-left:10px;"><a href="http://get.adobe.com/cn/flashplayer/" target="_blank">安装Macromedia Flash播放器</a></li>
-                    <li style="float:left; margin-left:10px;"><a href="" target="_blank">安装 Sliverlight</a></li>
+                    <li style="float:left; margin-left:10px;"><a href="http://www.microsoft.com/getsilverlight/Get-Started/Install/" target="_blank">安装 Sliverlight</a></li>
+                    <li style="float:left; margin-left:10px;"><a onclick="CommonSet(this,'cookieset','允许Cookies')" href="#">允许Cookies</a></li>
+                    <li style="float:left; margin-left:10px;"><a onclick="CommonSet(this,'popupset','允许弹出窗口')" href="#">允许弹出窗口</a></li>
                 </ul>
             </div>
         </div>
@@ -802,16 +804,34 @@
                 helpHtml += "<br/><ul>";
 
             if (data) {
-                eval("var json=" + data);
-                helpHtml += "<li><b>" + ditem.name + "</b> 存在的浏览器设置问题：";
-                helpHtml += data;
-                if (ditem.helpMsg || ditem.helpUrl) {
-                    helpHtml += "，如有疑问请 " + (ditem.helpMsg ? ditem.helpMsg : "") + 
-                        (ditem.helpUrl?" 访问<a href='"+ditem.helpUrl+"' target=_blank>帮助页面</a>":"");
-                }
-                helpHtml += "</li>";
+                //alert(data);
+                var rJson, isPassed = true;
+                eval("rJson=" + data);
 
-                checkResult = false;
+                var itemHelpHtml = "<li><b>" + ditem.name + "</b> 存在的浏览器设置问题：";
+                if (rJson && rJson.length > 0) {
+                    //helpHtml += data;
+                    for (var ii = 0; ii < rJson.length; ii++) {
+                        var jsonItem = rJson[ii];
+                        if (!jsonItem.value) {
+                            isPassed = false;
+                            itemHelpHtml += "&nbsp;" + CheckItemLang[jsonItem.key] + "<span class=\"result_no\">未通过</span>&nbsp;";
+                        }
+                    }
+                } else {
+                    itemHelpHtml += "检测时<span class=\"result_error\">发生错误</span>。";
+                    isPassed = false;
+                }
+
+                if (!isPassed && (ditem.helpMsg || ditem.helpUrl)) {
+                    itemHelpHtml += " 如有疑问请 " + (ditem.helpMsg ? ditem.helpMsg : "") +
+                        (ditem.helpUrl ? " 访问<a href='" + ditem.helpUrl + "' target=_blank>帮助页面</a>" : "");
+                }
+                itemHelpHtml += "</li>";
+                if (!isPassed) {
+                    checkResult = false;
+                    helpHtml += itemHelpHtml;
+                }
             }
             checkStatusArr.push(item.key);
 
@@ -834,8 +854,9 @@
             var item = Domains[i];
             if (item.checkUrl) {
                 //并发处理
-                var func = function () { init(showResult, item); };
-                window.setTimeout(func, 16 * i);
+                //var func = function () { init(showResult, item); };
+                //window.setTimeout(func, 32 * i);
+                init(showResult, item);
             }
         }
 
@@ -865,7 +886,9 @@
         };
 
         iframeProxy.src = item.checkUrl;
-        iframeProxy.style.display = "none"; //隐藏窗口
+        //iframeProxy.style.display = "none"; //隐藏窗口
+        iframeProxy.height = 120;
+        iframeProxy.width = 200;
 
         if (iframeProxy.attachEvent) {//判断是否为IE
             iframeProxy.attachEvent('onload', loadfn);
