修正程序下载链接

--- a/BrowerCheck.html
+++ b/BrowerCheck.html
@@ -383,7 +383,7 @@
                 $("#ieBrowerSuggest1_1").attr("target", "_blank");
 
                 $("#ieBrowerSuggest1_2").html("本地下载(XP 32位)");
-                $("#ieBrowerSuggest1_2").attr("href", "../Resource/Tools/IE8-WindowsXP-x86-CHS.rar");
+                $("#ieBrowerSuggest1_2").attr("href", "http://mis.msdi.cn/Portal/install/ie/IE8-WindowsXP-x86-CHS.exe");
                 $("#ieBrowerSuggest1_2").attr("target", "_blank");
                 
             }
@@ -543,7 +543,7 @@
                     <li>为了可以正常使用公司的业务系统，您的浏览器需要满足以下条件：</li>
                     <li style="height:10px;"></li>
                     <li>1、要求使用 Microsoft Internet Explorer 7.0 或以上版本，如果您使用<a target="_blank" href="http://www.google.com/chrome">Google Chrome</a>或<a target="_blank" href="http://firefox.com.cn/download/">Mozilla Firefox</a> 则大部分系统功能将无法使用。
-                        <br/>&nbsp;&nbsp; 如果你使用 360安全浏览器、360极速浏览器、QQ浏览器或搜狗浏览器等其他浏览器请在访问中南院业务系统时切换到“<b>兼容模式</b>”。
+                        <br/>&nbsp;&nbsp;&nbsp;&nbsp;如果您使用 360安全浏览器、360极速浏览器、QQ浏览器或搜狗浏览器等其他浏览器请在访问中南院业务系统时切换到“<b>兼容模式</b>”。
     </li>                    
                     <li>2、<span style="color:#008000;">推荐使用Microsoft Internet Explorer 8.0</span>
                         <a href="http://windows.microsoft.com/zh-CN/internet-explorer/downloads/ie-8">微软官方下载</a>
@@ -598,23 +598,7 @@
                             class="browerRet"></span><span id="ieBrowerSuggest10" class="browerSuggest">检测中...</span></li>
 
                         <li style="height:10px;"></li>
-                            <li><a href="http://mis.msdi.cn/sysmodule/FileSystem/Download.aspx?IsExec=true&Key=Goodway_BE-DownLoad&Id=FFL3MT1J_IETool.exe">下载常见问题修复工具(注：目前只在XP、Win7下进行全面的测试验证)</a></li>
-                    </ul>
-                </div>
-                <div class="check-brower-safari">
-                    <ul style="padding: 0px; margin: 0px; list-style: none;">
-                        <li>我们正在检查您的浏览器以确定是否满足以上的要求。如果看到任何一项失败！，请按照提示操作。 </li>
-                        <li style="height:10px;"></li>
-                        <li>1、浏览器：<span id="safariBrowerInfo1" class="browerInfo"></span><span id="safariBrowerRet1" class="browerRet"></span><a
-                            id="safariBrowerSuggest1" class="browerSuggest"></a></li>
-                        <li>2、Javascript：<span id="safariBrowerInfo2" class="browerInfo"></span><span id="safariBrowerRet2" class="browerRet"></span><a
-                            id="safariBrowerSuggest2" class="browerSuggest"></a></li>
-                        <li>3、Cookies：<span id="safariBrowerInfo3" class="browerInfo"></span><span id="safariBrowerRet3" class="browerRet"></span><a
-                            id="safariBrowerSuggest3" class="browerSuggest"></a></li>
-                        <li>4、弹出窗口：<span id="safariBrowerInfo4" class="browerInfo"></span><span id="safariBrowerRet4" class="browerRet"></span><a
-                            id="safariBrowerSuggest4" class="browerSuggest"></a></li>
-                        <li>5、Flash播放器：<span id="safariBrowerInfo5" class="browerInfo"></span><span id="safariBrowerRet5" class="browerRet"></span><a
-                            id="safariBrowerSuggest5" class="browerSuggest"></a></li>
+                            <li><a href="http://mis.msdi.cn/Portal/install/MSDI_IETool.exe?v=1.0.1">下载常见问题修复工具(注：目前只在XP、Win7下进行全面的测试验证)</a></li>
                     </ul>
                 </div>
                 <div class="check-brower-chrome">
@@ -678,7 +662,23 @@
                             <a id="fireBrowerSuggest5" class="browerSuggest"></a>
                         </li>
                     </ul>
-                </div>                
+                </div>
+                <div class="check-brower-safari">
+                    <ul style="padding: 0px; margin: 0px; list-style: none;">
+                        <li>我们正在检查您的浏览器以确定是否满足以上的要求。如果看到任何一项失败！，请按照提示操作。 </li>
+                        <li style="height:10px;"></li>
+                        <li>1、浏览器：<span id="safariBrowerInfo1" class="browerInfo"></span><span id="safariBrowerRet1" class="browerRet"></span><a
+                            id="safariBrowerSuggest1" class="browerSuggest"></a></li>
+                        <li>2、Javascript：<span id="safariBrowerInfo2" class="browerInfo"></span><span id="safariBrowerRet2" class="browerRet"></span><a
+                            id="safariBrowerSuggest2" class="browerSuggest"></a></li>
+                        <li>3、Cookies：<span id="safariBrowerInfo3" class="browerInfo"></span><span id="safariBrowerRet3" class="browerRet"></span><a
+                            id="safariBrowerSuggest3" class="browerSuggest"></a></li>
+                        <li>4、弹出窗口：<span id="safariBrowerInfo4" class="browerInfo"></span><span id="safariBrowerRet4" class="browerRet"></span><a
+                            id="safariBrowerSuggest4" class="browerSuggest"></a></li>
+                        <li>5、Flash播放器：<span id="safariBrowerInfo5" class="browerInfo"></span><span id="safariBrowerRet5" class="browerRet"></span><a
+                            id="safariBrowerSuggest5" class="browerSuggest"></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         
@@ -704,9 +704,13 @@
           </div>
             <div class="checkinfo-area-content">
                 <ul style="padding: 0px; margin: 0px; list-style: none;">
-                    <li style="float:left; margin-left:10px;"><a href="">电子签章安全软件</a></li>
-                    <li style="float:left; margin-left:10px;"><a href="">旧MIS系统插件</a></li>                    
-                    <li style="float:left; margin-left:10px;"><a href="" >OFFICE在线编辑工具</a></li>
+                    <li style="float:left; margin-left:10px;"><a href="http://mis.msdi.cn/Portal/install/Office/iSignatureASM.exe?v=1.1">电子签章安全软件</a></li>
+                    <li style="float:left; margin-left:10px;"><a href="http://mis.msdi.cn/Portal/install/
+Baisc.EXE?v=1.0">旧MIS系统插件</a></li>
+
+    <!--TODO 部署金格的示例代码于服务器-->
+    <!--<li style="float:left; margin-left:10px;"><a href="http://mis.msdi.cn:8080/coa/axis2-admin/office.jsp" >OFFICE在线编辑工具</a></li>-->
+
                 </ul>
             </div>
         </div>
