--- a/BrowerCheck.html
+++ b/BrowerCheck.html
@@ -201,10 +201,13 @@
 //                                (s = ua.match(/version\/([\d.]+).*safari/)) ? Sys.safari = s[1] : 0;
             if ($.ua().isIe) {//准确地处理IE兼容模式
                 Sys.ie = $.ua().ie;
+                Sys.win32 = window.navigator.platform == "Win32" ? true : false;//64位操作系统中执行32位IE返回值为 Win32，否则为 Win64
             } else if ($.ua().isFirefox) {
                 Sys.firefox = $.ua().engine.version;
-            } else if($.ua().isChrome) {
-                Sys.chrome = $.ua().engine.version;
+            //} else if ($.ua().isChrome || $.ua().is360ee || $.ua().is360se || $.ua().isLiebao || $.ua().isSougou) {
+            //    Sys.chrome = $.ua().engine.version;
+            } else if (s = ua.match(/chrome\/([\d.]+)/)) {
+                Sys.chrome = s[1];
             } else if(s = ua.match(/opera.([\d.]+)/)){
                 Sys.opera = s[1];
             } else if(s = ua.match(/version\/([\d.]+).*safari/)) {
@@ -227,7 +230,7 @@
             else {
                 $("#browerInfo").hide();
                 $("#browerSet").hide();
-                alert("系统暂不支持您当前使用的浏览器！请选择安装系统推荐使用的浏览器");
+                alert("系统暂不支持您当前使用的浏览器！请选择系统推荐使用的“微软IE”浏览器");
             }
         }
 
@@ -638,11 +641,6 @@
                         <li style="height:10px;"></li>
                             <li>
                                 <img src="CheckIE/msdi_ietools.gif" width="32px"/><a href="/Portal/install/MSDI_IETool.exe" title="v2.1.0">下载常见问题修复工具(注：目前只在XP、Win7下进行全面的测试验证)</a></li>
-                    </ul>
-                </div>
-                <div class="check-brower-chrome">
-                <ul style="padding: 0px; margin: 0px; list-style: none;">
-                        <li>我们正在检查您的浏览器以确定是否满足以上的要求。如果看到任何一项失败！，请按照提示操作。          <img src="CheckIE/msdi_ietools.gif" width="32px"/><a href="/Portal/install/MSDI_IETool.exe" title="v2.1.0">下载常见问题修复工具(注：目前只在XP、Win7下进行全面的测试验证)</a></li>
                     </ul>
                 </div>
                 <div class="check-brower-chrome">
