--- a/BrowerCheck.html
+++ b/BrowerCheck.html
@@ -9,12 +9,14 @@
     <!-- 开发//-->
     <script src="Scripts/jquery-1.7.1.js" type="text/javascript"></script>
     <script src="Scripts/jquery.cookie.js" type="text/javascript"></script>
+    <script src="Scripts/jquery.blockUI.js" type="text/javascript"></script>
     <script src="Scripts/jquery.ua.js" type="text/javascript"></script>
     
     <!-- 正式部署
         <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/jquery.min.js?v=1.7.2"></script>
-        <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/jquery.ua.min.js?v=1.2"></script>
         <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/jquery.cookie.js?v=1.3.1"></script>
+        <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/jquery.blockUI.js?v=2.66"></script>
+        <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/plugins/jquery.ua.min.js?v=1.2"></script>
     //-->
     
     <script src="config.js" type="text/javascript"></script>
@@ -569,7 +571,7 @@
         .a_setting{margin-left:8px;background: url("CheckIE/msdi_setting.gif") no-repeat scroll 0 0px;padding-left: 24px;line-height: 24px;}
     </style>
 </head>
-<body onload="InitialInfo()">
+<body>
     <div style="width: 100%;">
         <div id="set" style="display: none; position: absolute;">
         </div>
@@ -640,7 +642,7 @@
 
                         <li style="height:10px;"></li>
                             <li>
-                                <img src="CheckIE/msdi_ietools.gif" width="32px"/><a href="/Portal/install/MSDI_IETool.exe" title="v2.1.0">下载常见问题修复工具(注：目前只在XP、Win7下进行全面的测试验证)</a></li>
+                                <img src="CheckIE/msdi_ietools.gif" width="32px"/><a id="ietools" href="#" title="v2.1.0">下载常见问题修复工具(注：目前只在XP、Win7下进行全面的测试验证)</a></li>
                     </ul>
                 </div>
                 <div class="check-brower-chrome">
@@ -951,4 +953,33 @@ Baisc.EXE?v=1.0">旧MIS系统插件</a></li>
         document.body.appendChild(iframeProxy);
     }
 
+    $(document).ready(function () {
+        //自动修复工具的运行 .net运行时环境的支持
+        $("#ietools").click(function () {
+            if ($.ua().isIe && $.ua().ua.indexOf(".net clr") > 0) {
+                alert("已经安装.net运行时");
+            }
+            window.open(ContextPath + "/Portal/install/MSDI_IETool.exe", "MSDI_IETool", "width=320,height=160");
+            return false;
+        });
+
+        $.blockUI({ css: {
+            border: 'none',
+            padding: '15px',
+            backgroundColor: '#000',
+            '-webkit-border-radius': '10px',
+            '-moz-border-radius': '10px',
+            opacity: .5,
+            color: '#fff'
+        },
+            message: '正在检测您的浏览器配置情况，请稍候......',
+            timeout: 4000
+        });
+        //需要通过回调进行特殊处理，否则屏蔽层的效果不明显
+        var callFunc = function() {
+            InitialInfo();
+            setTimeout($.unblockUI, 500);
+        };
+        setTimeout(callFunc, 200);
+    });
 </script>
