1、受信站点自动修正测试器配置；2、文件名称修正；3、全局变量Sys

--- a/ky/othersite/check.html
+++ b/ky/othersite/check.html
@@ -136,7 +136,7 @@ function () {
         //弹窗设置检测
         var popupStatus = StatusNG;
         var str_feature = 'toolbar=no' + ',menubar=no' + ',scrollbars=no' + ',resizable=no' + ',status=no' + ',width=1' + ',height=1' + ',top=0' + ',left=0' + ',screenX=0' + ',screenY=0';
-        var popup_win = window.open("BrowerCheckClose.html", "wb_check", str_feature);
+        var popup_win = window.open("BrowserCheckClose.html", "wb_check", str_feature);
         if (popup_win) {
             popupStatus = StatusOK;
             var result = { key: 'Popup', value: 1 };
