调整安装软件下载

--- a/BrowserCheck.html
+++ b/BrowserCheck.html
@@ -894,12 +894,15 @@
           </div>
             <div class="checkinfo-area-content">
                 <ul style="padding: 0px; margin: 0px; list-style: none;">
-                    <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Office/iSignatureASM.exe?v=1.1" target="_blank">电子签章安全软件</a></li>
-                    <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Baisc.EXE?v=1.0" target="_blank">MIS系统插件</a></li>
-                    <li class="li_sp_down"><a href="http://www.microsoft.com/zh-cn/download/details.aspx?id=1639" target="_blank">.NET运行框架</a></li>
+                    <!--1.2 简化安装组件-->
+                    <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Office/iSignatureASM.exe" target="_blank">下载电子签章安全软件</a></li>
+                    <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Baisc.EXE" target="_blank">下载MIS系统插件</a></li>
+                    <!--5.1.30214.0-->
+                    <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Office/Silverlight5.exe" target="_blank">下载Sliverlight5安装文件</a></li>
+                    <li class="li_sp_down"><a href="http://www.microsoft.com/zh-cn/download/details.aspx?id=1639" target="_blank">安装.NET运行框架</a></li>
 
-    <!--TODO 部署金格的示例代码于服务器-->
-    <!--<li style="float:left; margin-left:10px;"><a href="http://mis.msdi.cn:8080/coa/axis2-admin/office.jsp" target="_blank">OFFICE在线编辑工具</a></li>-->
+                    <!--TODO 部署金格的示例代码于服务器-->
+                    <!--<li style="float:left; margin-left:10px;"><a href="http://mis.msdi.cn:8080/coa/axis2-admin/office.jsp" target="_blank">OFFICE在线编辑工具</a></li>-->
 
                 </ul>
             </div>
