修改文字内容

--- a/BrowserCheck.html
+++ b/BrowserCheck.html
@@ -724,11 +724,11 @@
         </div>
         <div class="checkinfo-area">
             <div class="checkinfo-area-title">
-                <div class="zxlm-f15">浏览器配置需求</div>
+                <div class="zxlm-f15">浏览器配置要求</div>
             </div>
             <div class="checkinfo-area-content">
                 <ul style="padding: 0px; margin: 0px; list-style: none;">
-                    <li>为了可以正常使用公司的业务系统，您的浏览器需要满足以下条件：</li>
+                    <li>为确保您可以正常使用公司的业务系统，您的浏览器需要满足以下条件：</li>
                     <li style="height:10px;"></li>
                     <li>1、要求使用 Microsoft Internet Explorer 7.0 或以上版本，如果您使用<a href="http://www.google.com/chrome" target="_blank">Google Chrome</a>或<a target="_blank" href="http://firefox.com.cn/download/" target="_blank">Mozilla Firefox</a> 则大部分系统功能将无法使用。
                         <br/>&nbsp;&nbsp;&nbsp;&nbsp;如果您使用 <!--<b><i>360安全</i></b>浏览器、<i><b>360极速</b></i>浏览器--><b><i>360</i></b>浏览器、<i><b>QQ</b></i>浏览器或<i><b>搜狗</b></i>浏览器等其他浏览器请在访问中南院业务系统时切换到“<b>兼容模式</b>”。
@@ -749,7 +749,7 @@
         </div>
         <div id="browserInfo" class="checkinfo-area">
             <div class="checkinfo-area-title">
-                <div class="zxlm-f15">浏览器配置自动检测报告</div>
+                <div class="zxlm-f15">浏览器配置自动检测报告&nbsp;&nbsp;<span style="color: red;">刷新窗口重新检测</span></div>
             </div>
             <div class="checkinfo-area-content">
                 <div class="check-browser-ie">
@@ -787,8 +787,7 @@
                             class="browserRet"></span><span id="ieBrowserSuggest10" class="browserSuggest">检测中...</span></li>
 
                         <li style="height:10px;"></li>
-                            <li>
-                                <img src="CheckIE/msdi_ietools.gif" width="32px"/><a id="ietools" href="#" title="v2.1.0">下载常见问题修复工具(注：目前只支持XP、Win7操作系统中的IE浏览器进行修复)</a></li>
+                        <li><img src="CheckIE/msdi_ietools.gif" width="32px"/><a id="ietools" href="#" title="v2.1.0">下载常见问题修复工具(注：目前只支持XP、Win7操作系统中的IE浏览器进行修复)</a></li>
                     </ul>
                 </div>
                 <div class="check-browser-chrome">
